Bug 1926381 The 'Instruction' link overlaps area in 'Edit'
behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -431,6 +431,10 @@ div.toolbarhtml {
     div.fieldset-body {
         background-color: $accent-bg !important;
     }
+    // move instructions down to avoid overlap with link
+    div.fieldset-body {
+        margin-top: 1px !important;
+    }
 }
 .peerinstructions {
     div.fieldset-body {
